@@ -1108,3 +1108,4 @@ The following functions accept any form a path. The INI and language INI functio
             Modified: OSDMenuGetH() renamed OSDMenuGetStringHeight()
             Modified: Rename OSDMenuGetW() OSDMenuGetStringWidth() and define OSDMenuGetW as an alias
             Fixed: Check ItemIndex for potential out-of-bounds array access
+2019-10-08  Modified: Return type of OSDMenuGetStringHeight() and OSDMenuGetStringWidth() changed from integer to dword
